--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.3",
     "uuid": "^3.1.0"
   },
